# smooth_noise_robust_differentiators_fir_filter

./: .gitignore  Makefile.am  README.md  configure.ac  reconfigure-mingw-win32.sh  reconfigure.sh
common/: TestUtils.h
src/: FirFilter.hpp  SNRDFir.hpp  catalans_triangle.cc  catalans_triangle.h
src_test_fir/: test_fir.cc
